--- a/package.json
+++ b/package.json
@@ -87,10 +87,10 @@
     "@formatjs/fast-memoize": "^2.2.7",
     "@formatjs/icu-messageformat-parser": "^2.11.2",
     "@formatjs/intl-localematcher": "^0.6.1",
-    "@redhat-cloud-services/frontend-components-config": "^6.6.2",
+    "@redhat-cloud-services/frontend-components-config": "^6.6.3",
     "@redhat-cloud-services/tsc-transform-imports": "^1.0.25",
-    "@swc/core": "^1.12.9",
-    "@swc/jest": "^0.2.38",
+    "@swc/core": "1.12.9",
+    "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -100,10 +100,10 @@
     "@types/react-dom": "^18.3.5",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^8.36.0",
-    "@typescript-eslint/parser": "^8.35.1",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "copy-webpack-plugin": "^13.0.0",
-    "eslint": "^9.30.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-formatjs": "^5.4.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-jest-dom": "^5.5.0",
