--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "jest-mock-axios": "^4.9.0",
     "jest-transform-stub": "^2.0.0",
     "jws": "^4.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "swc_mut_cjs_exports": "^10.7.0",
